Tidy up numbers a bit

--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -30,7 +30,7 @@
 \vs p057 3:5 And this is what happened in Andronover ages upon ages ago. The energy wheel grew and grew until it attained its maximum of expansion, and then, when contraction set in, it whirled on faster and faster until, eventually, the critical centrifugal stage was reached and the great breakup began.
 \vs p057 3:6 \pc \bibemph{500,000,000,000} years ago the first Andronover sun was born. This blazing streak broke away from the mother gravity grasp and tore out into space on an independent adventure in the cosmos of creation. Its orbit was determined by its path of escape. Such young suns quickly become spherical and start out on their long and eventful careers as the stars of space. Excepting terminal nebular nucleuses, the vast majority of Orvonton suns have had an analogous birth. These escaping suns pass through varied periods of evolution and subsequent universe service.
 \vs p057 3:7 \pc \bibemph{400,000,000,000} years ago began the recaptive period of the Andronover nebula. Many of the near\hyp{}by and smaller suns were recaptured as a result of the gradual enlargement and further condensation of the mother nucleus. Very soon there was inaugurated the terminal phase of nebular condensation, the period which always precedes the final segregation of these immense space aggregations of energy and matter.
-\vs p057 3:8 It was scarcely 1,000,000 years subsequent to this epoch that Michael of Nebadon, a Creator Son of Paradise, selected this disintegrating nebula as the site of his adventure in universe building. Almost immediately the architectural worlds of Salvington and the 100 constellation headquarters groups of planets were begun. It required almost 1,000,000 years to complete these clusters of specially created worlds. The local system headquarters planets were constructed over a period extending from that time to about five billion years ago.
+\vs p057 3:8 It was scarcely 1,000,000 years subsequent to this epoch that Michael of Nebadon, a Creator Son of Paradise, selected this disintegrating nebula as the site of his adventure in universe building. Almost immediately the architectural worlds of Salvington and the 100 constellation headquarters groups of planets were begun. It required almost 1,000,000 years to complete these clusters of specially created worlds. The local system headquarters planets were constructed over a period extending from that time to about 5,000,000,000 years ago.
 \vs p057 3:9 \pc \bibemph{300,000,000,000} years ago the Andronover solar circuits were well established, and the nebular system was passing through a transient period of relative physical stability. About this time the staff of Michael arrived on Salvington, and the Uversa government of Orvonton extended physical recognition to the local universe of Nebadon.
 \vs p057 3:10 \pc \bibemph{200,000,000,000} years ago witnessed the progression of contraction and condensation with enormous heat generation in the Andronover central cluster, or nuclear mass. Relative space appeared even in the regions near the central mother\hyp{}sun wheel. The outer regions were becoming more stabilized and better organized; some planets revolving around the newborn suns had cooled sufficiently to be suitable for life implantation. The oldest inhabited planets of Nebadon date from these times.
 \vs p057 3:11 Now the completed universe mechanism of Nebadon first begins to function, and Michael’s creation is registered on Uversa as a universe of inhabitation and progressive mortal ascension.
@@ -41,9 +41,9 @@
 \vs p057 4:3 \pc \bibemph{50,000,000,000} years ago this first period of sun dispersion was completed; the nebula was fast finishing its tertiary cycle of existence, during which it gave origin to 876,926 sun systems.
 \vs p057 4:4 \pc \bibemph{25,000,000,000} years ago witnessed the completion of the tertiary cycle of nebular life and brought about the organization and relative stabilization of the far\hyp{}flung starry systems derived from this parent nebula. But the process of physical contraction and increased heat production continued in the central mass of the nebular remnant.
 \vs p057 4:5 \pc \bibemph{10,000,000,000} years ago the quartan cycle of Andronover began. The maximum of nuclear\hyp{}mass temperature had been attained; the critical point of condensation was approaching. The original mother nucleus was convulsing under the combined pressure of its own internal\hyp{}heat condensation tension and the increasing gravity\hyp{}tidal pull of the surrounding swarm of liberated sun systems. The nuclear eruptions which were to inaugurate the second nebular sun cycle were imminent. The quartan cycle of nebular existence was about to begin.
-\vs p057 4:6 \pc \bibemph{8,000,000,000} years ago the terrific terminal eruption began. Only the outer systems are safe at the time of such a cosmic upheaval. And this was the beginning of the end of the nebula. This final sun disgorgement extended over a period of almost $2 \times 10^9$ years.
+\vs p057 4:6 \pc \bibemph{8,000,000,000} years ago the terrific terminal eruption began. Only the outer systems are safe at the time of such a cosmic upheaval. And this was the beginning of the end of the nebula. This final sun disgorgement extended over a period of almost 2,000,000,000 years.
 \vs p057 4:7 \pc \bibemph{7,000,000,000} years ago witnessed the height of the Andronover terminal breakup. This was the period of the birth of the larger terminal suns and the apex of the local physical disturbances.
-\vs p057 4:8 \pc \bibemph{6,000,000,000} years ago marks the end of the terminal breakup and the birth of your sun, the 56\ts{th} from the last of the Andronover 2\ts{nd} solar family. This final eruption of the nebular nucleus gave birth to 136,702 suns, most of them solitary orbs. The total number of suns and sun systems having origin in the Andronover nebula was 1,013,628. The number of the solar system sun is 1,013,572.
+\vs p057 4:8 \pc \bibemph{6,000,000,000} years ago marks the end of the terminal breakup and the birth of your sun, the 56\ts{th} from the last of the Andronover second solar family. This final eruption of the nebular nucleus gave birth to 136,702 suns, most of them solitary orbs. The total number of suns and sun systems having origin in the Andronover nebula was 1,013,628. The number of the solar system sun is 1,013,572.
 \vs p057 4:9 And now the great Andronover nebula is no more, but it lives on in the many suns and their planetary families which originated in this mother cloud of space. The final nuclear remnant of this magnificent nebula still burns with a reddish glow and continues to give forth moderate light and heat to its remnant planetary family of 165 worlds, which now revolve about this venerable mother of two mighty generations of the monarchs of light.
 \usection{5.\bibnobreakspace Origin of Monmatia --- The Urantia Solar System}
 \vs p057 5:1 \bibemph{5,000,000,000} years ago your sun was a comparatively isolated blazing orb, having gathered to itself most of the near\hyp{}by circulating matter of space, remnants of the recent upheaval which attended its own birth.
@@ -75,7 +75,7 @@
 \usection{7.\bibnobreakspace The Meteoric Era --- The Volcanic Age\\The Primitive Planetary Atmosphere}
 \vs p057 7:1 Throughout these early times the space regions of the solar system were swarming with small disruptive and condensation bodies, and in the absence of a protective combustion atmosphere such space bodies crashed directly on the surface of Urantia. These incessant impacts kept the surface of the planet more or less heated, and this, together with the increased action of gravity as the sphere grew larger, began to set in operation those influences which gradually caused the heavier elements, such as iron, to settle more and more toward the centre of the planet.
 \vs p057 7:2 \pc \bibemph{2,000,000,000} years ago the earth began decidedly to gain on the moon. Always had the planet been larger than its satellite, but there was not so much difference in size until about this time, when enormous space bodies were captured by the earth. Urantia was then about \bibfrac{1}{5} its present size and had become large enough to hold the primitive atmosphere which had begun to appear as a result of the internal elemental contest between the heated interior and the cooling crust.
-\vs p057 7:3 Definite volcanic action dates from these times. The internal heat of the earth continued to be augmented by the deeper and deeper burial of the radioactive or heavier elements brought in from space by the meteors. The study of these radioactive elements will reveal that Urantia is more than one billion years old on its surface. The radium clock is your most reliable timepiece for making scientific estimates of the age of the planet, but all such estimates are too short because the radioactive materials open to your scrutiny are all derived from the earth’s surface and hence represent Urantia’s comparatively recent acquirements of these elements.
+\vs p057 7:3 Definite volcanic action dates from these times. The internal heat of the earth continued to be augmented by the deeper and deeper burial of the radioactive or heavier elements brought in from space by the meteors. The study of these radioactive elements will reveal that Urantia is more than 1,000,000,000 years old on its surface. The radium clock is your most reliable timepiece for making scientific estimates of the age of the planet, but all such estimates are too short because the radioactive materials open to your scrutiny are all derived from the earth’s surface and hence represent Urantia’s comparatively recent acquirements of these elements.
 \vs p057 7:4 \pc \bibemph{1,500,000,000} years ago the earth was \bibfrac{2}{3} its present size, while the moon was nearing its present mass. Earth’s rapid gain over the moon in size enabled it to begin the slow robbery of the little atmosphere which its satellite originally had.
 \vs p057 7:5 Volcanic action is now at its height. The whole earth is a veritable fiery inferno, the surface resembling its earlier molten state before the heavier metals gravitated toward the centre. \bibemph{This is the volcanic age.} Nevertheless, a crust, consisting chiefly of the comparatively lighter granite, is gradually forming. The stage is being set for a planet which can someday support life.
 \vs p057 7:6 \pc The primitive planetary atmosphere is slowly evolving, now containing some water vapour, carbon monoxide, carbon dioxide, and hydrogen chloride, but there is little or no free nitrogen or free oxygen. The atmosphere of a world in the volcanic age presents a queer spectacle. In addition to the gases enumerated it is heavily charged with numerous volcanic gases and, as the air belt matures, with the combustion products of the heavy meteoric showers which are constantly hurtling in upon the planetary surface. Such meteoric combustion keeps the atmospheric oxygen very nearly exhausted, and the rate of meteoric bombardment is still tremendous.
