--- a/tex/p058.tex
+++ b/tex/p058.tex
@@ -8,7 +8,7 @@
 \vs p058 1:4 Your primitive ancestors freely circulated about in the salty ocean; today, this same oceanlike salty solution freely circulates about in your bodies, bathing each individual cell with a chemical liquid in all essentials comparable to the salt water which stimulated the first protoplasmic reactions of the first living cells to function on the planet.
 \vs p058 1:5 But as this era opens, Urantia is in every way evolving toward a state favourable for the support of the initial forms of marine life. Slowly but surely physical developments on earth and in adjacent space regions are preparing the stage for the later attempts to establish such life forms as we had decided would be best adapted to the unfolding physical environment --- both terrestrial and spatial.
 \vs p058 1:6 Subsequently the Satania commission of Life Carriers returned to Jerusem, preferring to await the further breakup of the continental land mass, which would afford still more inland seas and sheltered bays, before actually beginning life implantation.
-\vs p058 1:7 \pc On a planet where life has a marine origin the ideal conditions for life implantation are provided by a large number of inland seas, by an extensive shore line of shallow waters and sheltered bays; and just such a distribution of the earth’s waters was rapidly developing. These ancient inland seas were seldom over 150--180\,m deep, and sunlight can penetrate ocean water for more than 180\,m.
+\vs p058 1:7 \pc On a planet where life has a marine origin the ideal conditions for life implantation are provided by a large number of inland seas, by an extensive shore line of shallow waters and sheltered bays; and just such a distribution of the earth’s waters was rapidly developing. These ancient inland seas were seldom over 150--180\,m deep, and sunlight can penetrate ocean water for more than 180\,m\fnst{\textbf{sunlight can penetrate ocean water for more than 180\,m}, The density of most liquids decreases with increasing temperature, but water is an exception to this rule. In the region of temperatures 0--3\,°C for the salty ocean water or 0--4\,°C for the fresh water, the density \bibemph{increases} with increasing temperature, reaching the maximum density at the temperature 3\,°C for the salty and 4\,°C for the fresh water respectively. Therefore, the warm water at the surface (say, having the temperature 2\,°C) is more dense than the cold water (say, at 1\,°C) underneath and moves down replacing it, thus ensuring that the temperature does not fall below 2--3\,°C all the way to the bottom. This is also the reason why a pond begins to freeze from the surface to the bottom and not the other way around, which would have been catastrophic for the survival of fish and other forms of life in the pond.}.
 \vs p058 1:8 And it was from such seashores of the mild and equable climes of a later age that primitive plant life found its way onto the land. There the high degree of carbon in the atmosphere afforded the new land varieties of life opportunity for speedy and luxuriant growth. Though this atmosphere was then ideal for plant growth, it contained such a high degree of carbon dioxide that no animal, much less man, could have lived on the face of the earth.
 \usection{2.\bibnobreakspace The Urantia Atmosphere}
 \vs p058 2:1 The planetary atmosphere filters through to the earth about $5 \times 10^{-10}$ of the sun’s total light emanation. If the light falling upon North America were paid for at the rate of 2¢/kWh, the annual light bill would be upward of 800 quadrillion\fnst{\textbf{quadrillion} $=$ one thousand trillion, $10^{15}$.} dollars. Chicago’s bill for sunshine would amount to considerably over \$100,000,000 a day. And it should be remembered that you receive from the sun other forms of energy --- light is not the only solar contribution reaching your atmosphere. Vast solar energies pour in upon Urantia embracing wave lengths ranging both above and below the recognition range of human vision.
