Get rid of \shadowbox

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -40,7 +40,7 @@ I highly recommend many resources available on his website at \texttt{http://www
 The online interactive quiz based on this book and called \bibemph{The Cosmic Citizenship Quiz} is freely accessible from our website:
 
 \begin{center}
-\shadowbox{\upshape\bfseries http://www.bibles.org.uk}
+\upshape\bfseries http://www.bibles.org.uk
 \end{center}
 
 I invite all the readers to test their comprehension by participating in the quiz.
