Fix the comment

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -30,7 +30,7 @@
 % comment out to disable fancy lettrine letters
 %\tunemarkuptag{fancylettrine}
 
-% comment out to enable Introduction
+% comment out to disable Introduction
 %\tunemarkuptag{introinclude}
 
 % comment out to enable fancy page decorations
